WIP
-----------------------------
* Weather Widget
  - Add "decimal_places_temperature" option (requested by user "Dean688"). Default is "1" decimal place, set to "0" to hide decimals.
    Note, when number of digits is less than expected, extra leading zero or decimal place will be added to fill the gap.

2.29.2 (2025-05-29)
-----------------------------
* RestAPI Module
  - Fixed an issue where some telemetry readings would stop updating if game was paused and resumed recently.

2.29.1 (2025-05-25) hot fix
-----------------------------
* RestAPI Module
  - Fixed a game-crash issue that related to some bugged "Rest API" URI resource addresses. Thanks to user "npastore28" for reporting the issue.
    Note, this game-crash issue is due to a known issue in LMU's "Rest API", where some of the URI resource addresses (such as "garage/Pitstop/getPitstopTimes") are buggy and can crash game if accessed them under certain conditions.
    This hot fix removed access to those bugged URI resource addresses.

2.29.0 (2025-05-24)
-----------------------------
* Major change
  - Optimized "Rest API" accessing methods, which adds additional update time delay that reduces unnecessary data accessing if API data has not changed recently.
    For example, data from Rest API is accessed every 0.1 seconds on default setting, but if API data has not changed recently, the update interval will be increased up to every 2 seconds instead (for example, "pit strategy" data is only changed when user changes it in MFD menu).
  - Separated "pit strategy" data accessing from other none-pit data (fuel, energy, damage, etc), and can be turned off completely via the new "enable_pit_strategy_access" option in RestAPI Module.